tela de login feita designer

--- a/paginas/notificacoes.html
+++ b/paginas/notificacoes.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <title>Notificações</title>
 </head>
 <body>
     <section class="container">
-        
+        <section class="header-notificacoes">
+            <a href="javascript:history.back();"><i class="ri-arrow-left-line"></i></a>
+            <h1>Todas as Notificações</h1>
+        </section>
+
+        <section class="notificacoes">
+            <!--uma notificacao a cada serviço-->
+            <div class="notificacao">
+                <img src="../imagens/atencao-removebg-preview.png" alt="">
+                <div class="nome-do-servico">nome do servico</div>
+                <a href="./detalhes-servico.html">Ver mais...</a>
+            </div>
+        </section>
+
+        <!--NÃO TERA BARRA DE NAVEGAÇÃO-->
+
     </section>
 </body>
 </html>
