--- a/paginas/usuario-contratante.html
+++ b/paginas/usuario-contratante.html
@@ -16,7 +16,7 @@
             <div class="tipo-da-conta">Tipo da conta</div>
             <section class="dados-usuario">
                 <div class="img-usuario">
-                    <img src="" alt="">
+                    <img src="../imagens/imagem-sem-user.png" alt="">
                     <div class="editar-imagem"><i class="ri-image-edit-fill"></i></div>
                     <section class="avaliacao">
                         <i class="ri-star-fill"></i>
@@ -61,7 +61,10 @@
                 adicionar numero
             </div>
             <div class="notificacoes">
-                <a href="./notificacoes.html"></a>
+                <a href="./notificacoes.html">
+                    <img src="../imagens/notificacao-removebg-preview.png" alt="">
+                    <p>Suas Notificações</p>
+                </a>
             </div>
         </section>
         
@@ -69,6 +72,12 @@
         <!--SAIR DA CONTA-->
         <section class="deslogar">
             <a href="../index.html">Sair</a>
+        </section>
+
+        <section class="barra-de-navegacao">
+            <a href="./pagina-inicial-contratante.html" class="navegacao"><i class="ri-home-smile-fill"></i></a>
+            <a href="./usuario-contratante.html" class="navegacao"><i class="ri-user-3-fill"></i></a>
+            <a href="./parte-engrenagem.html" class="navegacao"><i class="ri-settings-3-fill"></i></a>
         </section>
 
     </section>
