--- a/paginas/pagina-inicial-profissional.html
+++ b/paginas/pagina-inicial-profissional.html
@@ -58,8 +58,8 @@
         <!--BARRA DE NAVEGAÇÃO-->
         <section class="barra-de-navegacao">
             <a href="#" class="navegacao"><i class="ri-home-smile-fill"></i></a>
-            <a href="./usuario-contratante.html" class="navegacao"><i class="ri-user-3-fill"></i></a>
-            <a href="./parte-engrenagem.html" class="navegacao"><i class="ri-settings-3-fill"></i></a>
+            <a href="./usuario-profissional.html" class="navegacao"><i class="ri-user-3-fill"></i></a>
+            <a href="./parte-engrenagem-profissional.html" class="navegacao"><i class="ri-settings-3-fill"></i></a>
         </section>
         
     </section>
