--- a/paginas/login-profissional.html
+++ b/paginas/login-profissional.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./estilos/index.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="../estilos/index.css">
     <title>HelpService - login</title>
 </head>
 
@@ -16,32 +17,39 @@
 
         </div>
         <section class="container_form">
-            <img src="" alt="">
+            <img src="../imagens/imagem-sem-user.png" alt="">
             <section class="form">
                 <!--icone-->
                 <label for="email"><i class="ri-user-3-fill"></i></label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" required placeholder="ex:viontechofc@gmail.com" autocomplete="email">
                 <!--icone-->
                 <label for="senha"><i class="ri-lock-2-fill"></i></label>
-                <input type="password" name="senha" id="senha">
-                <input type="checkbox" name="me-lembre" id="me-lembre">
-                <label for="me-lembre">Me lembre</label>
-                <button type="submit">Logar como Profissional</button>
+                <input type="password" name="senha" id="senha" placeholder="*********" >
+
+                <section class="lembrar-senha">
+                    <input type="checkbox" name="me-lembre" id="me-lembre">
+                    <label for="me-lembre">Me lembre</label>
+                    
+                </section>
+
+                <button class="bnt-logar" type="submit">Logar como Profissional</button>
+
+                <section class="opcoes">
+                    <div class="primeiras_opcoes">
+                        <a href="./redefinir-senha.html" class="link_opcoes">Esqueci a senha</a>
+                        <a href="../index.html" class="link_opcoes">Entrar como contratante</a>
+                    </div>
+                    <a href="cadastro-profissional.html" class="cadastro">Não tem uma conta? Cadastre-se</a>
+                </section>
             </section>
-            <section class="opcoes">
-                <div class="primeiras_opcoes">
-                    <a href="./redefinir-senha.html" class="link_opcoes">Esqueci a senha</a>
-                    <a href="../index.html" class="link_opcoes">Entrar como contratante</a>
-                </div>
-                <a href="cadastro-profissional.html" class="cadastro">Não tem uma conta? Cadastre-se</a>
-            </section>
+
         </section>
         <section class="politica_termos">
             <a href="politica-de-privacidade.html" class="politica_e_termos">Política de Privacidade</a>
             <a href="termos-e-servicos.html" class="politica_e_termos">Termos e Serviços</a>
             <a href="ajuda-e-suporte.html" class="suporte">Suporte</a>
         </section>
-        <div class="azul_claro">
+        <div class="azul_claro1">
 
         </div>
     </section>
