--- a/paginas/pagina-inicial-contratante.html
+++ b/paginas/pagina-inicial-contratante.html
@@ -23,11 +23,11 @@
             <h1 class="titulo-patrocinados">Patrocinados</h1>
             <section class="patrocinio">
                 <!--imagens patrocinadas tamanho 308x172 -->
-                <img src="../imagens/patrocinio.jpe" alt="">
-                <img src="../imagens/patrocinio.jpeg" alt="">
-                <img src="../imagens/patrocinio.jpeg" alt="">
-                <img src="../imagens/patrocinio.jpeg" alt="">
-                <img src="../imagens/patrocinio.jpeg" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
             </section>
         </section>
 
