tirando overflow do index

--- a/paginas/ajuda-e-suporte.html
+++ b/paginas/ajuda-e-suporte.html
@@ -32,8 +32,9 @@
             <section class="enviados">
                 <div class="mensagem-enviada">
                     <!--PEGAR DO BANCO DE DADOS ATRAVES DO EMAIL, E PEGAR TODAS AS MENSAGENS JA ENVIADAS-->
-                    Nenhuma mensagem enviada ainda
+
                 </div>
+                <h1>Nenhuma mensagem enviada ainda</h1>
             </section>
         </section>
 
