feita a ultima tela com designer

--- a/paginas/configuracoes.html
+++ b/paginas/configuracoes.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="../estilos/configuracoes.css">
     <title>Configurações</title>
 
 </head>
@@ -22,14 +23,14 @@
         <section class="configuracoes">
             <!--NOTIFICAÇÕES-->
             <div class="notificacoes">
-                <label for="notificacoes">Notificações</label>
-                <input type="checkbox" name="notificacoes" id="notificacoes">
+                <label for="notificacoes1">Notificações</label>
+                <input type="checkbox" name="notificacoes1" id="notificacoes1">
             </div>
 
 
             <!--MOSTRAR SENHA NA TELA DO USUARIO-->
             <div class="mostrar-senha">
-                <label for="mostrar-a-senha">Mostrar senha na tela do usuário</label>
+                <label for="mostrar-a-senha">Mostrar senha na tela do <br> usuário</label>
                 <input type="checkbox" name="mostrar-a-senha" id="mostrar-a-senha">
             </div>
 
@@ -63,8 +64,8 @@
 
             <!--TAMANHO DA FONTE-->
             <div class="tamanho-font">
-                <h1>Tamanho da Fonte</h1>
-                <input type="number" placeholder="14-20">
+                <label for="number">Ajuste de fonte</label>
+                <input id="number" type="number" placeholder="14-20">
             </div>
 
 
@@ -78,7 +79,7 @@
 
             <!--AVALIAÇÃO E FEEDBACK-->
             <div class="avaliacao-app">
-                <a href="./avaliacao-feedback-app.html">Avaliação e Feddback do app</a>
+                <a href="./avaliacao-feedback-app.html">Avaliação e Feedback do app</a>
             </div>
 
 
