--- a/paginas/login-profissional.html
+++ b/paginas/login-profissional.html
@@ -39,7 +39,7 @@
                         <a href="./redefinir-senha.html" class="link_opcoes">Esqueci a senha</a>
                         <a href="../index.html" class="link_opcoes">Entrar como contratante</a>
                     </div>
-                    <a href="cadastro-profissional.html" class="cadastro">Não tem uma conta? Cadastre-se</a>
+                    <a href="../paginas/formas-de-cadastro.html" class="cadastro">Não tem uma conta? Cadastre-se</a>
                 </section>
             </section>
 
