quase finalizando as telas de configurações

--- a/paginas/cadastro-contratante.html
+++ b/paginas/cadastro-contratante.html
@@ -16,7 +16,7 @@
             
         </section>
         <h1><span>Help</span>Service</h1><br>
-        <h1>Cadastro contratante</h1>
+        <h1 class="cadastro">Cadastro contratante</h1>
         <section class="form-contratante">
             <!--icone-->
             <label for="email"><i class="ri-user-3-fill"></i></label>
