--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
         <!--CONTAINER DO FORMULARIO DE LOGIN-->
         <section class="container_form">
-            <img src="./imagens/imagem-sem-user.png" alt="">
+            <img src="./imagens/Designer (1).jpeg" alt="">
             <section class="form">
+                <h1>Contratante</h1>
                 <!--icone-->
                 <label for="email"><i class="ri-user-3-fill"></i></label>
                 <input type="email" name="email" id="email" required placeholder="ex:viontechofc@gmail.com" autocomplete="email">
