--- a/paginas/formas-de-cadastro.html
+++ b/paginas/formas-de-cadastro.html
@@ -9,12 +9,9 @@
 </head>
 <body>
     <section class="container">
-        <section class="img-cadastro">
-            <img src="../imagens/Designer (1).jpeg" alt="">
-            
-        </section>
-        <h1><span>Help</span>Service</h1><br>
-        <h1>Cadastrar-se como:</h1>
+       
+        <h1 ><span>Help</span>Service</h1><br>
+        <h1 class="cadastro">Cadastrar-se como:</h1>
         <section class="opcoes-cadastro">
             <a href="cadastro-contratante.html" class="opcao-cadastro">Contratante</a>
             <a href="cadastro-profissional.html" class="opcao-cadastro2">Profissional</a>
