--- a/paginas/parte-engrenagem-profissional.html
+++ b/paginas/parte-engrenagem-profissional.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <title>Notificações</title>
+    <title>Configurações</title>
 </head>
 <body>
     <section class="container">
