finalizando paginas profissional

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--CONTAINER DO FORMULARIO DE LOGIN-->
         <section class="container_form">
             <img src="./imagens/Designer (1).jpeg" alt="">
-            <section class="form">
+            <form action="./paginas/pagina-inicial-contratante.html" class="form">
                 <h1>Contratante</h1>
                 <!--icone-->
                 <label for="email"><i class="ri-user-3-fill"></i></label>
@@ -46,7 +46,7 @@
                     </div>
                     <a href="./paginas/formas-de-cadastro.html" class="cadastro">Não tem uma conta? Cadastre-se</a>
                 </section>
-            </section>
+            </form>
 
 
         </section>
