--- a/paginas/login-profissional.html
+++ b/paginas/login-profissional.html
@@ -18,7 +18,7 @@
         </div>
         <section class="container_form">
             <img src="../imagens/Designer (1).jpeg" alt="">
-            <section class="form">
+            <form action="../paginas/pagina-inicial-profissional.html" class="form">
                 <h1>Profissional</h1>
                 <!--icone-->
                 <label for="email"><i class="ri-user-3-fill"></i></label>
@@ -42,7 +42,7 @@
                     </div>
                     <a href="../paginas/formas-de-cadastro.html" class="cadastro">Não tem uma conta? Cadastre-se</a>
                 </section>
-            </section>
+            </form action="../paginas/pagina-inicial-profissional.html">
 
         </section>
         <section class="politica_termos">
