--- a/paginas/solicitar-verificacao.html
+++ b/paginas/solicitar-verificacao.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="../estilos/verificacao.css">
     <title>Document</title>
 </head>
 <body>
     <section class="container">
         <section class="header-verificacao">
             <a href="javascript:history.back();"><i class="ri-arrow-left-line"></i></a>
-            <h1>Ajuda e suporte</h1>
+            <h1>Solicitar Verificação</h1>
         </section>
 
         <section class="explicacao">
