--- a/paginas/usuario-contratante.html
+++ b/paginas/usuario-contratante.html
@@ -80,7 +80,7 @@
         <!--SAIR DA CONTA-->
         <section class="deslogar">
             <a href="../index.html">Sair</a>
-        </section>
+        </section><br><br><br><br>
 
         <section class="barra-de-navegacao">
             <a href="./pagina-inicial-contratante.html" class="navegacao"><i class="ri-home-smile-fill"></i></a>
