--- a/paginas/usuario-profissional.html
+++ b/paginas/usuario-profissional.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="../estilos/tela-de-usuario.css">
     <title>Usuário - profissional</title>
 </head>
 
@@ -13,11 +14,10 @@
 
         <!--CONTAINER EDITAR-->
         <section class="container-editar">
-            <div class="tipo-da-conta">Tipo da conta</div>
+            <div class="tipo-da-conta"><p>Profissional</p></div>
             <section class="dados-usuario">
                 <div class="img-usuario">
                     <img src="../imagens/imagem-sem-user.png" alt="">
-                    <div class="editar-imagem"><i class="ri-image-edit-fill"></i></div>
                     <section class="avaliacao">
                         <i class="ri-star-fill"></i>
                         <div class="numero-avaliacao">
@@ -26,9 +26,9 @@
                     </section>
                 </div>
                 <section class="informacoes-usuario">
-                    <div class="nome-usuario"></div>
-                    <div class="email-usuario"></div>
-                    <div class="senha-usuario"></div>
+                    <div class="nome-usuario">nome do usuario</div>
+                    <div class="email-usuario">email@gmail.com</div>
+                    <div class="senha-usuario">senha: ********</div>
 
                     <button class="bnt-editar">Editar</button>
                 </section>
@@ -42,12 +42,14 @@
                 <h1>Trabalhos Cadastrados</h1>
                 <div class="valor-de-trabalhos">
                     <!--=ADICIONAR DO BANCO DE DADOS-->
+                    17
                 </div>
             </div>
             <div class="valores">
                 <h1>Trabalhos Finalizados</h1>
                 <div class="trabalhos-finalizados">
                     <!--=ADICIONAR DO BANCO DE DADOS-->
+                    15
                 </div>
             </div>
         </section>
@@ -64,6 +66,14 @@
                     <img src="../imagens/lampada-removebg-preview.png" alt="">
                     <div class="nome-do-servico">nome do serviço</div>
                 </div>
+                <div class="servico-patrocinado">
+                    <img src="../imagens/lampada-removebg-preview.png" alt="">
+                    <div class="nome-do-servico">nome do serviço</div>
+                </div>
+                <div class="servico-patrocinado">
+                    <img src="../imagens/lampada-removebg-preview.png" alt="">
+                    <div class="nome-do-servico">nome do serviço</div>
+                </div>
             </section>
         </section>
 
@@ -71,13 +81,17 @@
         <!--MAIS INFORMAÇÕES-->
         <section class="mais-informacoes">
             <div class="cidade">
-                adicionar cidade
-            </div>
+                <i class="ri-map-pin-2-fill"></i>
+                <p class="nome-da-cidade">
+                    R. Salto do Itararé - Guarulhos
+                    Jardim Jovaia
+                </p>
+            </div><br>
             <div class="contato">
-                adicionar numero
-            </div>
+                <i class="ri-whatsapp-fill"></i>
+                <p class="numero">+55 (11) 95118-2656</p>
+            </div><br>
             <div class="notificacoes">
-                
                 <a href="./notificacoes.html">
                     <img src="../imagens/notificacao-removebg-preview.png" alt="">
                     <p>Suas Notificações</p>
@@ -89,7 +103,7 @@
         <!--SAIR DA CONTA-->
         <section class="deslogar">
             <a href="../index.html">Sair</a>
-        </section>
+        </section><br><br><br><br>
 
         <!--BARRA DE NAVEGAÇÃO-->
         <section class="barra-de-navegacao">
