finalizando as paginas

--- a/paginas/usuario-profissional.html
+++ b/paginas/usuario-profissional.html
@@ -108,7 +108,7 @@
         <!--BARRA DE NAVEGAÇÃO-->
         <section class="barra-de-navegacao">
             <a href="./pagina-inicial-profissional.html" class="navegacao"><i class="ri-home-smile-fill"></i></a>
-            <a href="./usuario-profissional.html" class="navegacao"><i class="ri-user-3-fill"></i></a>
+            <a href="#" class="navegacao"><i class="ri-user-3-fill"></i></a>
             <a href="./parte-engrenagem-profissional.html" class="navegacao"><i class="ri-settings-3-fill"></i></a>
         </section>
 
