criando os arquivos em javascript para começar

--- a/paginas/cadastrar-servico.html
+++ b/paginas/cadastrar-servico.html
@@ -38,5 +38,6 @@
             <button class="cadastrar-servico">Cadastrar serviço</button>
         </section>
     </section>
+    <script src="../js/cadastrar-servico.js"></script>
 </body>
 </html>
