--- a/paginas/criar-categoria.html
+++ b/paginas/criar-categoria.html
@@ -27,6 +27,7 @@
             </section>
         </section>
     </section>
+    <script src="../js/criar-categoria.js"></script>
 </body>
 
 </html>
