--- a/paginas/servicos-disponiveis.html
+++ b/paginas/servicos-disponiveis.html
@@ -43,6 +43,7 @@
             </div>
         </section>
     </section>
+    <script src="../js/servicos-disponiveis.js"></script>
 </body>
 
 </html>
