--- a/paginas/cadastro-profissional.html
+++ b/paginas/cadastro-profissional.html
@@ -13,11 +13,10 @@
     <section class="container">
         <section class="img-cadastro">
             <img src="../imagens/Designer (1).jpeg" alt="">
-            
         </section>
         <h1><span>Help</span>Service</h1><br>
-        <h1  class="cadastro" >Cadastro Profissional</h1>
-        <section class="form-contratante">
+        <h1 class="cadastro">Cadastro Profissional</h1>
+        <section class="form-profissional">
             <!--icone-->
             <label for="email"><i class="ri-user-3-fill"></i></label>
             <input type="email" name="email" id="email" placeholder="Email: viontechofc@gmail.com">
@@ -77,16 +76,16 @@
             <label for="cidade">Se preferir escreva sua cidade aqui</label>
             <input type="text" name="cidade" id="cidade" placeholder="Nome da cidade e Região">
 
-            <button type="submit">Cadastrar</button>
+            <button type="button" onclick="cadastroProfissional()">Cadastrar</button>
         </section>
         <div class="voltar">
             <a href="./formas-de-cadastro.html" class="link-voltar">
                 <i class="ri-arrow-left-line"></i>
-
             </a>
-
         </div>
     </section>
+
+    <script src="../js/cadastro-profissional.js"></script>
 </body>
 
 </html>
