--- a/paginas/cadastro-contratante.html
+++ b/paginas/cadastro-contratante.html
@@ -13,7 +13,6 @@
     <section class="container">
         <section class="img-cadastro">
             <img src="../imagens/Designer (1).jpeg" alt="">
-            
         </section>
         <h1><span>Help</span>Service</h1><br>
         <h1 class="cadastro">Cadastro contratante</h1>
@@ -31,7 +30,6 @@
             <label for="regiao">Sua cidade</label>
             <select name="regiao" id="regiao">
                 <option value="">Selecione uma cidade</option>
-
                 <!-- Norte -->
                 <option value="manaus">Norte - Manaus</option>
                 <option value="porto-velho">Norte - Porto Velho</option>
@@ -40,7 +38,6 @@
                 <option value="macapa">Norte - Macapá</option>
                 <option value="palmas">Norte - Palmas</option>
                 <option value="belem">Norte - Belém</option>
-
                 <!-- Nordeste -->
                 <option value="salvador">Nordeste - Salvador</option>
                 <option value="fortaleza">Nordeste - Fortaleza</option>
@@ -50,13 +47,11 @@
                 <option value="natal">Nordeste - Natal</option>
                 <option value="joao-pessoa">Nordeste - João Pessoa</option>
                 <option value="aracaju">Nordeste - Aracaju</option>
-
                 <!-- Centro-Oeste -->
                 <option value="brasilia">Centro-Oeste - Brasília</option>
                 <option value="cuiaba">Centro-Oeste - Cuiabá</option>
                 <option value="campo-grande">Centro-Oeste - Campo Grande</option>
                 <option value="goiania">Centro-Oeste - Goiânia</option>
-
                 <!-- Sudeste -->
                 <option value="sao-paulo">Sudeste - São Paulo</option>
                 <option value="rio-de-janeiro">Sudeste - Rio de Janeiro</option>
@@ -64,7 +59,6 @@
                 <option value="vitoria">Sudeste - Vitória</option>
                 <option value="niteroi">Sudeste - Niterói</option>
                 <option value="juiz-de-fora">Sudeste - Juiz de Fora</option>
-
                 <!-- Sul -->
                 <option value="curitiba">Sul - Curitiba</option>
                 <option value="porto-alegre">Sul - Porto Alegre</option>
@@ -73,18 +67,17 @@
                 <option value="cascavel">Sul - Cascavel</option>
                 <option value="londrina">Sul - Londrina</option>
             </select>
-            
+
             <label for="cidade">Se preferir escreva sua cidade aqui</label>
             <input type="text" name="cidade" id="cidade" placeholder="Nome da cidade e Região">
 
-            <button type="submit">Cadastrar</button>
+            <!-- Botão de cadastro -->
+            <button onclick="cadastroContratante()">Cadastrar</button>
         </section>
         <div class="voltar">
             <a href="./formas-de-cadastro.html" class="link-voltar">
                 <i class="ri-arrow-left-line"></i>
-
             </a>
-
         </div>
     </section>
     <script src="../js/cadastro.js"></script>
