feito login, cadastro, editar perfil

--- a/paginas/login-profissional.html
+++ b/paginas/login-profissional.html
@@ -18,7 +18,7 @@
         </div>
         <section class="container_form">
             <img src="../imagens/Designer (1).jpeg" alt="">
-            <form action="../paginas/pagina-inicial-profissional.html" class="form">
+            <section class="form">
                 <h1>Profissional</h1>
                 <!--icone-->
                 <label for="email"><i class="ri-user-3-fill"></i></label>
@@ -33,7 +33,7 @@
                     
                 </section>
 
-                <button class="bnt-logar" type="submit">Logar como Profissional</button>
+                <button onclick="logarProfissional()" class="bnt-logar" type="submit">Logar como Profissional</button>
 
                 <section class="opcoes">
                     <div class="primeiras_opcoes">
@@ -42,7 +42,7 @@
                     </div>
                     <a href="../paginas/formas-de-cadastro.html" class="cadastro">Não tem uma conta? Cadastre-se</a>
                 </section>
-            </form action="../paginas/pagina-inicial-profissional.html">
+            </section>
 
         </section>
         <section class="politica_termos">
@@ -54,6 +54,7 @@
 
         </div>
     </section>
+    <script src="../js/login-profissional.js"></script>
 </body>
 
 </html>
