--- a/paginas/pagina-inicial-contratante.html
+++ b/paginas/pagina-inicial-contratante.html
@@ -100,6 +100,7 @@
         // Muda a imagem a cada 3 segundos
         setInterval(changeImage, 3000);
     </script>
+    <script src="../js/pagina-contratante.js"></script>
 </body>
 
 </html>
