--- a/paginas/usuario-contratante.html
+++ b/paginas/usuario-contratante.html
@@ -28,15 +28,29 @@
                     </section>
                 </div>
                 <section class="informacoes-usuario">
-                    <div class="nome-usuario">nome do usuario</div>
-                    <div class="email-usuario">email@gmail.com</div>
-                    <div class="senha-usuario">senha: ********</div>
+                    <div class="email-usuario" id="email-usuario">email@gmail.com</div>
+                    <div class="senha-usuario" id="senha-usuario">senha: ********</div>
 
-                    <button class="bnt-editar">Editar</button>
+                    <button onclick="abrirTelaEdicao()" class="bnt-editar">Editar</button>
                 </section>
 
             </section>
         </section>
+
+        <!-- Tela de Edição -->
+        <div class="tela-edicao" id="tela-edicao">
+            <div class="form-edicao">
+                <h3>Editar Informações</h3>
+                <label for="email-input">Email:</label>
+                <input type="email" id="email-input" />
+
+                <label for="senha-input">Senha:</label>
+                <input type="password" id="senha-input" />
+
+                <button onclick="salvarMudancas()">Salvar</button>
+                <button onclick="fecharTelaEdicao()">Cancelar</button>
+            </div>
+        </div>
 
         <!--OUTROS VALORES-->
         <section class="valores-servicos">
@@ -89,6 +103,7 @@
         </section>
 
     </section>
+    <script src="../js/usuario-contratante.js"></script>
 </body>
 
 </html>
