--- a/paginas/criar-categoria.html
+++ b/paginas/criar-categoria.html
@@ -16,6 +16,8 @@
             <h1>Categoria Personalizada</h1>
         </section>
 
+        <p>As categorias criadas por você não ficam visíveis na tela principal dos contratantes, ela é definida como uma categoria própria e pode ser vista ao cadastrar um serviço.</p>
+
         <section class="centro">
             <section class="criar-categoria">
                 <label for="nome">Nome da Categoria</label>
@@ -23,7 +25,7 @@
                 <label for="descricao">Sobre a categoria</label>
                 <textarea name="descricao" id="descricao">
                 </textarea>
-                <button class="criar">Criar categoria</button>
+                <button onclick="criarCategoria()" class="criar">Criar categoria</button>
             </section>
         </section>
     </section>
