--- a/paginas/notificacoes.html
+++ b/paginas/notificacoes.html
@@ -18,8 +18,7 @@
             <!--uma notificacao a cada serviço-->
             <div class="notificacao">
                 <img src="../imagens/atencao-removebg-preview.png" alt="">
-                <div class="nome-do-servico">nome do servico</div>
-                <a href="./detalhes-servico.html">Ver mais...</a>
+                <div class="nome-do-servico">novos serviços todos os dias</div>
             </div>
         </section>
 
