--- a/paginas/servicos-disponiveis.html
+++ b/paginas/servicos-disponiveis.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="../estilos/servicos.disponiveis.css">
     <title>Serviços disponíveis</title>
 </head>
 
@@ -29,7 +30,7 @@
                 <details class="detalhes-servico">
                     <summary>Detalhes do serviço</summary><br>
                     <div class="descricao">
-                        descrição do serviço, como ele é feito e mais....
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam soluta, hic rerum blanditiis eum voluptas ea voluptate amet accusantium obcaecati nam possimus expedita ab labore minus beatae similique harum laboriosam!
                     </div>
                     <div class="valor">
                         <p class="preco">R$ 49,90</p>
@@ -38,6 +39,31 @@
                     <div class="contatos">
                         <p class="numero"> Número: +55 (11) 95118--2656</p>
                         <p class="email">Email: viontech@gmail.com</p>
+                    </div>
+                    <div class="categoria">
+                        <p class="nome-categoria">Categoria: </p>
+                    </div>
+                </details>
+            </div>
+            
+            <div class="servico">
+                <h1 class="nome-do-servico">Nome do serviço</h1>
+
+                <details class="detalhes-servico">
+                    <summary>Detalhes do serviço</summary><br>
+                    <div class="descricao">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam soluta, hic rerum blanditiis eum voluptas ea voluptate amet accusantium obcaecati nam possimus expedita ab labore minus beatae similique harum laboriosam!
+                    </div>
+                    <div class="valor">
+                        <p class="preco">R$ 49,90</p>
+                        <p class="Tipo de pagamento">Tipo de pagamento: Único</p>
+                    </div>
+                    <div class="contatos">
+                        <p class="numero"> Número: +55 (11) 95118--2656</p>
+                        <p class="email">Email: viontech@gmail.com</p>
+                    </div>
+                    <div class="categoria">
+                        <p class="nome-categoria">Categoria: </p>
                     </div>
                 </details>
             </div>
