--- a/paginas/cadastrar-servico.html
+++ b/paginas/cadastrar-servico.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="../estilos/cadastrar-servico.css">
     <title>Cadastrar serviço</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
 
             <label for="categorias">Categoria</label>
             <select name="categorias" id="categorias">
-                <option value="">selecione uma categoria</option>
+                <option value="selecione uma categoria">selecione uma categoria</option>
             </select><br>
 
             <section class="valor">
@@ -35,7 +36,7 @@
                 </select>
             </section>
 
-            <button class="cadastrar-servico">Cadastrar serviço</button>
+            <button onclick="cadastrarSevico()" class="cadastrar-servico">Cadastrar serviço</button>
         </section>
     </section>
     <script src="../js/cadastrar-servico.js"></script>
