--- a/paginas/ajuda-e-suporte.html
+++ b/paginas/ajuda-e-suporte.html
@@ -23,7 +23,7 @@
 
             <textarea name="Motivo-do-contato" id="Motivo-do-contato" required placeholder="Descreva o motivo do seu contato..."></textarea>
 
-            <button type="submit">Enviar</button>
+            <button onclick="ajuda()" type="submit">Enviar</button>
         </section>
 
         <!--MENSAGENS DE CONTATO-->
