--- a/paginas/solicitar-verificacao.html
+++ b/paginas/solicitar-verificacao.html
@@ -43,8 +43,9 @@
                 <input type="text" name="cnpj" id="cnpj" placeholder="Adicionar o CNPJ">
             </section>
 
-            <button class="analisar">Enviar para análise</button>
+            <button onclick="verificar()" class="analisar">Enviar para análise</button>
         </section>
     </section>
+    <script src="../js/solicitar-verificacao.js"></script>
 </body>
 </html>
